🔐 Clear username/password preview when hidding the popup

In some cases, the autofill preview stays, making the field appear
uneditable for the user.

Bug: 783716
Change-Id: I60e156993ffaa6ead935ca45eec05c01cb70cb2a
Reviewed-on: https://chromium-review.googlesource.com/789071
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Christos Froussios <cfroussios@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519120}
Former-commit-id: 06e9d8071bb30350c9b569970c6821fafc270839